--- a/index.html
+++ b/index.html
@@ -20,22 +20,15 @@
         <link rel="stylesheet" href="inc/style/main.css">
 		<script src="inc/js/JQuery.js"></script>
     </head>
-    <body> <!--class="fixed"-->
+    <body class="fixed">
     <!-- Прелоадер -->
 
-    <!-- <div class="preloader">
+    <div class="preloader">
         <svg viewBox="0 0 75 75">
             <circle cx="37.5" cy="37.5" r="25" fill="transparent" stroke="#000" stroke-width="2"></circle>
         </svg>
-    </div> -->
-<!--    <div class="preloader">-->
-<!--        <div class="preloader-1">-->
-<!--            <h1>Loading...</h1>-->
-<!--            <progress value="0" max="100" id="progressbar"></progress>-->
-<!--            <span class="progress-value">0%</span>-->
-<!--        </div>-->
-<!--    </div>-->
-        
+    </div>
+
     <div class="wrapper">
         <div class="content">
             <div class="header">
