Modified type module

--- a/index.html
+++ b/index.html
@@ -350,7 +350,6 @@ c0 -83 19 -113 92 -146 40 -18 79 -27 141 -31 73 -4 89 -9 107 -28 l21 -23 57
         });
 	</script>
     <script src="inc/js/preloader.js"></script>
-    <script src="inc/js/questLang.js"></script>
-    <script src="inc/js/main.js"></script>
+    <script src="inc/js/main.js" type="module"></script>
     </body>
 </html>
