rebase commit for more optimisation
Make more smoothly header

Make more smoothly header

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="inc/style/main.css">
 		<script src="inc/js/JQuery.js"></script>
     </head>
-    <body >
-    <!-- Прелоадер class="fixed"-->
+    <body class="fixed">
+    <!-- Прелоадер -->
 
-   <!--  <div class="preloader">
+   <div class="preloader">
         <svg viewBox="0 0 75 75">
             <circle cx="37.5" cy="37.5" r="25" fill="transparent" stroke="#000" stroke-width="2"></circle>
         </svg>
-    </div> -->
+    </div>
 
     <div class="wrapper">
         <div class="content">
@@ -328,6 +328,7 @@
 	<script>
         $(".menuToggle").click(function (){
             $(".menu").toggleClass('open');
+            $(".head").toggleClass('open');
             $(".nav").toggleClass('open');
         });
         $(window).on("scroll", function() {
