--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                     </a>
                     <div class="navigation">
                         <div class="auth">
-                            <a href="auth/auth.html">Войти</a>
-                            <a href="auth/register.html">Зарегистрироваться</a>
+                            <a href="auth/index.html">Войти</a>
+                            <a href="auth/index.html#reg">Зарегистрироваться</a>
                         </div>
                         <div class="menu">
                             <div class="menuToggle"></div>
