--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                     </div>
                 </div>
                 <div class="nav">
-                    <li><a href="auth/auth.html">Войти</a></li>
-                    <li><a href="auth/register.html">Зарегистрироваться</a></li>
+                    <li><a href="auth/index.html">Войти</a></li>
+                    <li><a href="auth/index.html#reg">Зарегистрироваться</a></li>
                 </div>
             </div>
             <div class="article">
