add some update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="content">
             <div class="head">
                 <div class="header">
-                    <a href="/">
+                    <a href="index.html">
                         <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                              width="1500.000000pt" height="500.000000pt" viewBox="0 0 1500.000000 500.000000"
                              preserveAspectRatio="xMidYMid meet">
@@ -218,7 +218,7 @@
                     </a>
                     <div class="navigation">
                         <div class="auth">
-                            <a href="auth/index.html">Войти</a>
+                            <a href="auth/index.html#auth">Войти</a>
                             <a href="auth/index.html#reg">Зарегистрироваться</a>
                         </div>
                         <div class="menu">
@@ -357,5 +357,6 @@
     <script src="inc/js/preloader.js"></script>
     <script src="inc/js/questLang.js"></script>
     <script src="inc/js/main.js"></script>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     </body>
 </html>
