--- a/auth/index.html
+++ b/auth/index.html
@@ -12,23 +12,14 @@
 			<img src="src/img/icon_user.svg" class="icon">
 			<form method="post" class="formBox">
 				<div class="formBox_inp">
-					<div class="inp">
-						<img src="src/img/icon_login.svg">
-						<input type="mail" name="email" id="email" required="">
-						<label for="email">email</label>
-					</div>
-					<div class="inp">
-						<img src="src/img/icon_lock.svg">
-						<input type="password" name="password" id="password" required="" value="test">
-						<label for="password">password</label>
-						<img src="src/img/icon_eye.svg" class="eye"/>
-					</div>
 				</div>
 				<input type="submit" value="Войти" id="auth">
+				<p id="mess" class="hidden">Test</p>
 				<p><span id="test2">Если вы ещё не зарегистрированы, то </span><a href="#reg" id="test">зарегистрируйтесь</a>!</p>
 			</form>
 		</div>
 	</div>
 	<script src="src/main.js"></script>
+	<script src="src/passwordGenerator.js"></script>
 </body>
 </html>
